# Imagen

./: AGENTS.md  README.md  pyproject.toml
.speciter/: iters.json
.speciter/docs/: pytest.md  requests.md
.speciter/iterations/imagen-cli-openrouter-mvp/: FINISHED.md  PLAN.md  SPEC.md
imagen/: __main__.py  auth_store.py  cli.py  config.py  errors.py  mcp_server.py  validation.py
imagen/commands/: __init__.py  auth.py  generate.py  install.py
imagen/models/: capabilities.py  request.py
imagen/providers/: base.py  openrouter.py
imagen/services/: __init__.py  generation.py  image_encoder.py  image_saver.py  payload_builder.py
imagen/utils/: mime.py
imagencli/: __init__.py  __main__.py  cli.py  config.py  constants.py  errors.py  mcp_server.py  validation.py
imagencli/commands/: generate.py  install.py
imagencli/models/: __init__.py  capabilities.py  request.py  response.py
imagencli/providers/: base.py  openrouter.py
imagencli/services/: generation.py  image_encoder.py  image_saver.py  payload_builder.py
imagencli/utils/: mime.py  output.py  paths.py
skills/imagen-cli/: SKILL.md
tests/: test_cli_args.py  test_generate_command.py  test_image_encoder.py  test_image_saver.py  test_install_command.py  test_mcp_server.py  test_openrouter_provider.py  test_payload_builder.py
