[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "imagen"
version = "0.1.0"
description = "CLI for OpenRouter-based image generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=42.0.0",
    "fastmcp==3.0.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
]

[project.scripts]
imagen = "imagen.cli:main"
imagen-mcp = "imagen.mcp_server:main"

[tool.hatch.build.targets.wheel]
include = [
    "/imagen",
    "/skills",
]

[tool.hatch.build.targets.sdist]
include = [
    "/imagen",
    "/skills",
    "/tests",
    "/README.md",
    "/pyproject.toml",
]
